Update style.css to solve too wide title column (#13)
* Update style.css to solve too wide title column

Solves too wide title column like in the case of https://www.pathofexile.com/forum/view-post/14987094
Also makes the title always on one line - nowrap, which keeps the line height always the same. You can reconsider this if you want to.

* remove nowrap for now

* update css cache buster

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -197,6 +197,11 @@ td.icon img {
     transform: translate(-50%, -50%);
 }
 
+td.title {
+    max-width: 450px;
+    overflow: hidden;
+}
+
 td.body {
     background-color: #262626;
     padding: 10px;
